<resources>
    <string name="app_name">Makeup App</string>
    <string name="color_your_world">Color your world</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_account">No account? Sign up!</string>
    <string name="register">Register</string>
    <string name="required_field">Field required!</string>
    <string name="invalid_mail">Email invalid</string>
    <string name="invalid_confirm_password">Invalid confirm password</string>
    <string name="must_contain_at_least_one_lower_case_and_number">Password length must be a minimum 6 of characters, contain both uppercase and lowercase alphabetic letters, and at least one number.</string>
    <string name="list_of_products">List of products</string>
    <string name="products_types">Products types</string>
    <string name="something_went_wrong_please_try_again">Something went wrong,\n please try again</string>
    <string name="try_again">Try again</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="product_details">Product details</string>
    <string name="pick_color">Pick a color:</string>
    <string name="buy_product">Buy product</string>
    <string name="pick_number">Pick number of items:</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="product_name">Product name:</string>
    <string name="product_brand">Product brand:</string>
    <string name="color">Color:</string>
    <string name="total_price">Total price:</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="bronzer">bronzer</string>
    <string name="foundation">foundation</string>
    <string name="eyeliner">eyeliner</string>
    <string name="blush">blush</string>
    <string name="eyebrow">eyebrow</string>
    <string name="eyeshadow">eyeshadow</string>
    <string name="lip_liner">lip liner</string>
    <string name="lipstick">lipstick</string>
    <string name="mascara">mascara</string>
    <string name="nail_polish">nail polish</string>
    <string name="exit_app">Exit application?</string>
    <string name="delete_product">Delete product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successfully_added_to_cart">You successfully added product to shopping cart</string>
    <string name="successfully_logged_in">Successfully logged in</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="total">Total:</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="_1">1</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
</resources>
