<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/login_background"
        tools:context=".view.fragments.LoginFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="18dp"
            android:paddingRight="18dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_email_white"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@android:color/white" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_key_white"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@android:color/white" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary" />

        <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/no_account"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
    </LinearLayout>

</ScrollView>