<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

    <TextView
            android:id="@+id/tvEmptyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_cart_is_empty"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:visibility="gone"/>

    <ImageView
            android:id="@+id/ivEmptyCart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/empty_cart"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    <ScrollView
            android:id="@+id/productInCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="visible">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cart_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:clipToPadding="false" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_title_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/total"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp" />

                <TextView
                        android:id="@+id/tv_sum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"

                        />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical"
            android:visibility="gone">

        <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/something_went_wrong_please_try_again"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_margin="20dp"/>

        <Button
                android:id="@+id/tryAgain"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/try_again"
                android:textColor="#FFFFFF"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>
    </LinearLayout>

</LinearLayout>
