<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:layout_constraintVertical_chainStyle="spread_inside"
                tools:ignore="ContentDescription" />

        <TextView
                android:id="@+id/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/product_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorBlack" />

        <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorBlack" />

        <TextView
                android:id="@+id/pick_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/pick_color"
                android:textColor="@color/colorBlack"
                android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:clipToPadding="false"
                android:layout_marginEnd="20dp"
                android:paddingBottom="0dp" />

        <TextView
                android:id="@+id/pick_number_of_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/pick_number"
                android:textColor="@color/colorBlack" />


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

            <ImageButton
                    android:id="@+id/btn_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle_shape"
                    android:tint="@color/colorPrimary"
                    android:padding="10dp"
                    android:src="@drawable/ic_remove"
                    tools:ignore="ContentDescription" />

            <TextView
                    android:id="@+id/num_of_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_1"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack" />

            <ImageButton
                    android:id="@+id/btn_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle_shape"
                    android:tint="@color/colorPrimary"
                    android:padding="10dp"
                    android:src="@drawable/ic_add"
                    tools:ignore="ContentDescription" />

        </LinearLayout>

        <Button
                android:id="@+id/btn_buy_product"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_buy_product"
                android:text="@string/buy_product"
                android:textColor="@color/colorWhite" />

    </LinearLayout>
</ScrollView>